--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
         </div>
       </div>
       <div class="blog-card">
-        <div class="blog-image blog-image-2" style="background-image: url('./blog2-cover.jpg');"></div>
+        <div class="blog-image blog-image-2" style="background-image: url('./blog2-cover.png');"></div>
         <div class="blog-content">
           <h3>FlexiRead Showcased at Columbia University's Tech Day</h3>
           <div class="blog-meta">April 17, 2025</div>
