--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 
   .blog-image-3 {
     background-size: cover;
+    background-position: top center;
   }
 
   .blog-grid {
@@ -614,18 +615,18 @@
         </div>
       </div>
       <div class="blog-card">
-        <div class="blog-image blog-image-3" style="background-image: url('https://images.unsplash.com/photo-1519791883288-dc8bd696e667?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80');"></div>
+        <div class="blog-image blog-image-3" style="background-image: url('./blog3-cover.png');"></div>
         <div class="blog-content">
-          <h3>AI Tools for Language Learners: Beyond FlexiRead</h3>
-          <div class="blog-meta">April 5, 2025</div>
-          <p class="blog-excerpt">Explore how AI is revolutionizing language learning. This article covers the most innovative tools and how to incorporate them into your study routine.</p>
+          <h3>We Are Graduating from the Amazing IP Journey</h3>
+          <div class="blog-meta">May 8, 2025</div>
+          <p class="blog-excerpt">Celebrating our final showcase and the remarkable growth we've experienced throughout IP. Reflecting on challenges overcome, friendships formed, and skills developed during this transformative educational experience.</p>
           <a href="blog3.html" class="blog-link">Read More →</a>
         </div>
       </div>
     </div>
   </div>
 </section>
-  <!-- 页尾 Footer -->
+  <!-- Footer -->
   <footer>
     <div class="container">
       <div class="footer-content">
