--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
   .blog-image-3 {
     background-size: cover;
-    background-position: top center;
+    background-position: center 35%;
   }
 
   .blog-grid {
