--- a/blog3.html
+++ b/blog3.html
@@ -302,7 +302,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 FlexiRead for ESL. All rights reserved.</p>
+      <p>&copy; 2025 Zehao Li & Sijia Cheng. FlexiRead for ESL. All rights reserved.</p>
     </div>
   </footer>
 </body>
