--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Zehao Li & Sijia Chen. FlexiRead for ESL. All rights reserved.</p>
+        <p>&copy; 2025 Zehao Li & Sijia Cheng. FlexiRead for ESL. All rights reserved.</p>
       </div>
     </div>
   </footer>
