--- a/blog1.html
+++ b/blog1.html
@@ -296,7 +296,7 @@
       <p>As Hoffman (2017) notes, these systems often restrict learners to a limited selection of texts that may not align with their interests or provide optimal challenge for growth. This limitation is particularly problematic for ESL learners, whose motivation and progress depend heavily on engaging with appropriately challenging and personally relevant materials.</p>
 
       <blockquote>
-        "The right balance between challenge and comprehensibility creates the ideal environment for natural language growth and sustained motivation."
+        The right balance between challenge and comprehensibility creates the ideal environment for natural language growth and sustained motivation.
       </blockquote>
 
       <h2>Our Solution</h2>
@@ -389,7 +389,7 @@
       </ul>
       
       <blockquote>
-        "The CEFR gives you a clear and shared language to describe skills and set meaningful goals."
+        The CEFR gives you a clear and shared language to describe skills and set meaningful goals.
       </blockquote>
       
       <h3>Benefits of CEFR-Based Learning</h3>
