--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
           <h3>Get Started</h3>
           <ul class="footer-links">
             <li><a href="app.html">Try the App</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
