--- a/contact.html
+++ b/contact.html
@@ -232,6 +232,7 @@
       }
     }
 
+    /* Contact Form Specific Styles */
     .contact-container {
       display: flex;
       flex-wrap: wrap;
@@ -351,6 +352,7 @@
       transform: translateY(-2px);
     }
 
+    /* Success message animation */
     .success-message {
       background-color: #d4edda;
       color: #155724;
@@ -367,54 +369,16 @@
         opacity: 0;
         transform: translateY(-10px);
       }
-
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
-
-    .social-connect {
-      margin-top: 60px;
-      text-align: center;
-    }
-
-    .social-connect h3 {
-      font-size: 1.8rem;
-      margin-bottom: 20px;
-    }
-
-    .social-icons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .social-icon {
-      width: 60px;
-      height: 60px;
-      background-color: white;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5rem;
-      box-shadow: var(--box-shadow);
-      transition: var(--transition);
-      text-decoration: none;
-      color: var(--primary-color);
-    }
-
-    .social-icon:hover {
-      transform: translateY(-5px);
-      background-color: var(--primary-color);
-      color: white;
-    }
   </style>
 </head>
 
 <body>
+  <!-- Navbar -->
   <nav class="navbar">
     <div class="container navbar-container">
       <a href="index.html" class="logo">
@@ -429,6 +393,9 @@
     </div>
   </nav>
 
+  <!-- Hero Section removed completely -->
+  
+  <!-- Contact Section with adjusted padding to compensate for removed hero -->
   <section id="contact" style="padding-top: 200px;">
     <div class="container">
       <div class="section-title">
@@ -438,22 +405,26 @@
 
       <div class="contact-container">
         <div class="contact-form">
-          <form id="contactForm" onsubmit="return submitForm(event)">
+          <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="cd0543ad-9e23-4542-9294-4f150d0bb9dc">
+            <input type="hidden" name="redirect" value="https://web3forms.com/success">
+            <input type="hidden" name="subject" value="New Contact Form Submission from FlexiRead">
+            <input type="hidden" name="from_name" value="FlexiRead Contact Form">
             <div class="form-group">
               <label for="name">Your Name</label>
-              <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+              <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
             </div>
             <div class="form-group">
               <label for="email">Email Address</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
             </div>
             <div class="form-group">
               <label for="subject">Subject</label>
-              <input type="text" class="form-control" id="subject" placeholder="What is this regarding?" required>
+              <input type="text" class="form-control" id="subject" name="subject" placeholder="What is this regarding?" required>
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea class="form-control" id="message" placeholder="Enter your message here..." required></textarea>
+              <textarea class="form-control" id="message" name="message" placeholder="Enter your message here..." required></textarea>
             </div>
             <button type="submit" class="submit-btn">Send Message</button>
             <div id="successMessage" class="success-message">Thank you! Your message has been sent successfully.</div>
@@ -461,9 +432,11 @@
         </div>
       </div>
 
+      <!-- Social Connect section removed -->
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <div class="container">
       <div class="footer-content">
@@ -510,27 +483,6 @@
         observer.observe(section);
       });
     });
-
-    function submitForm(event) {
-      event.preventDefault();
-      const name = document.getElementById('name').value;
-      const email = document.getElementById('email').value;
-      const subject = document.getElementById('subject').value;
-      const message = document.getElementById('message').value;
-      console.log("Form submitted with values:", {
-        name,
-        email,
-        subject,
-        message,
-        recipient: 'zl3323@tc.columbia.edu'
-      });
-      document.getElementById('successMessage').style.display = 'block';
-      document.getElementById('contactForm').reset();
-      setTimeout(() => {
-        document.getElementById('successMessage').style.display = 'none';
-      }, 5000);
-      return false;
-    }
   </script>
 </body>
 
