--- a/blog3.html
+++ b/blog3.html
@@ -282,8 +282,7 @@
 
   <!-- Blog Content -->
   <div class="blog-main">
-    <img src="./blog3-cover.png" alt="Blog cover" class="blog-cover" style="max-height: 400px; object-fit: contain;">
-    <h1 class="blog-title">FlexiRead Project Reflection</h1>
+    <img src="./blog3-cover.png" alt="IP Showcase" class="blog-cover" style="width: 100%; height: auto; max-height: 450px; object-fit: cover; object-position: center;">    <h1 class="blog-title">FlexiRead Project Reflection</h1>
     <div class="blog-date">April 28, 2025</div>
 
     <div class="blog-content">
