--- a/blog2.html
+++ b/blog2.html
@@ -291,8 +291,8 @@
       <p>Compared to other language tools like Cathoven, visitors appreciated FlexiRead's emphasis on solid pedagogical principles, particularly our focus on noticing facilitation and structured implementation of Krashen's i+1 principle in a practical, user-friendly format.</p>
       
       <blockquote>
-        I've tested numerous language learning technologies, and FlexiRead stands out for its precision and pedagogical foundation. The i+1 implementation is the most thoughtful I've encountered. This will be an invaluable resource for both educators and self-directed learners.
-        <span class="testimonial-author">— Michael Chen, ESL Curriculum Developer</span>
+        I’m a college educator, and I was very impressed when the inventors of FlexiRead showed me a demo of their newly launched software. It captures text from an article, then through AI, the software lets us state the student level after which time it will adjust the words. I find this so useful not only for ESL but also for composition and developmental English class too.
+        <span class="testimonial-author">— John Bandman, Assistant Professor at Bergen Community College</span>
       </blockquote>
       
       <h2>User Feedback Highlights</h2>
