--- a/blog2.html
+++ b/blog2.html
@@ -277,8 +277,8 @@
       <p>Through hands-on demonstrations, visitors experienced how FlexiRead transforms any English text to match a learner's optimal challenge level. Our presentation highlighted the implementation of the i+1 principle—adapting content to precisely one CEFR level above the user's current proficiency—creating the perfect balance between accessibility and language growth.</p>
 
       <blockquote>
-        FlexiRead bridges a critical gap in ESL education. The ability to transform authentic materials into level-appropriate content while preserving the original meaning is remarkable. This tool has tremendous potential to revolutionize how we approach reading in language classrooms.
-        <span class="testimonial-author">— Dr. Sarah Mendez, TESOL Program Director</span>
+        Hold
+        <span class="testimonial-author">— Erik Voss, Assistant Professor at Teachers College, Columbia University</span>
       </blockquote>
       
       <h2>What Sets FlexiRead Apart</h2>
