--- a/app.html
+++ b/app.html
@@ -607,6 +607,15 @@
       const event = new Event('change');
       cefrSelect.dispatchEvent(event);
     }
+
+    function isValidUrl(string) {
+      try {
+        new URL(string);
+        return true;
+      } catch (_) {
+        return false;
+      }
+    }
     async function extractContentFromUrl(url) {
       try {
         const response = await fetch(`https://cors-anywhere.herokuapp.com/${url}`);
@@ -623,33 +632,30 @@
         throw new Error('Unable to extract content from the provided URL. Please try pasting the text directly.');
       }
     }
-async function processText(text, cefrLevel) {
-  try {
-    const workerUrl = 'https://dify-proxy.zl3323.workers.dev/'; 
-    
-    const response = await fetch(workerUrl, {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({
-        inputs: {
-          "CEFR": cefrLevel,
-          "enteredText": text
-        },
-        response_mode: "blocking",
-        user: userId
-      })
-    });
-    
-    if (!response.ok) throw new Error(`API error: ${response.status}`);
-    const data = await response.json();
-    return data.data.outputs.text || data.data.outputs.result || JSON.stringify(data.data.outputs);
-  } catch (error) {
-    console.error('Error details:', error);
-    throw error;
-  }
-}
+    async function processText(text, cefrLevel) {
+      try {
+        const response = await fetch('https://api.dify.ai/v1/workflows/run', {
+          method: 'POST',
+          headers: {
+            'Authorization': 'Bearer app-lMTTgaZkDzOzeeDAhvaqLDj9',
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            inputs: {
+              "CEFR": cefrLevel,
+              "enteredText": text
+            },
+            response_mode: "blocking",
+            user: userId
+          })
+        });
+        if (!response.ok) throw new Error(`API error: ${response.status}`);
+        const data = await response.json();
+        return data.data.outputs.text || data.data.outputs.result || JSON.stringify(data.data.outputs);
+      } catch (error) {
+        throw error;
+      }
+    }
 
     function showError(message) {
       errorMessage.textContent = message;
@@ -681,6 +687,19 @@ async function processText(text, cefrLevel) {
       processButton.disabled = true;
       try {
         let contentToProcess = text;
+        if (isValidUrl(text)) {
+          try {
+            contentToProcess = await extractContentFromUrl(text);
+          } catch (urlError) {
+            showError(urlError.message);
+            loading.style.display = 'none';
+            document.getElementById('input-section').style.display = 'block';
+            processButton.disabled = false;
+            // Reset FAQ margin
+            faqSection.style.marginTop = '';
+            return;
+          }
+        }
         const adjustedText = await processText(contentToProcess, cefrLevel);
         // Fill and show results
         resultsContent.textContent = adjustedText;
