--- a/index.html
+++ b/index.html
@@ -609,9 +609,9 @@
       <div class="blog-card">
         <div class="blog-image blog-image-2" style="background-image: url('./blog2-cover.png');"></div>
         <div class="blog-content">
-          <h3>FlexiRead Showcased at Columbia University's Tech Day</h3>
+          <h3>FlexiRead Showcased at Applied Linguistics & TESOL Tech Day</h3>
           <div class="blog-meta">April 17, 2025</div>
-          <p class="blog-excerpt">FlexiRead developers presented our innovative language learning tool at Columbia University's Language Technology Open House.</p>
+          <p class="blog-excerpt">FlexiRead developers presented our innovative language learning tool at Applied Linguistics & TESOL Tech Day at Teachers College.</p>
           <a href="blog2.html" class="blog-link">Read More →</a>
         </div>
       </div>
