--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
         <div class="blog-content">
           <h3>FlexiRead Showcased at Applied Linguistics & TESOL Tech Day</h3>
           <div class="blog-meta">April 17, 2025</div>
-          <p class="blog-excerpt">FlexiRead developers presented our innovative language learning tool at Applied Linguistics & TESOL Tech Day at Teachers College.</p>
+          <p class="blog-excerpt">FlexiRead developers presented our innovative language learning tool at Applied Linguistics & TESOL Tech Day at Teachers College, Columbia University.</p>
           <a href="blog2.html" class="blog-link">Read More →</a>
         </div>
       </div>
