--- a/blog2.html
+++ b/blog2.html
@@ -278,7 +278,7 @@
 
       <blockquote>
         Sijia and Zehao have demonstrated how an AI-assistive reading tool can be developed based on principles from language assessment and second language acquisition.
-        <span class="testimonial-author">— Erik Voss, Organizer of Tech Day event, Assistant Professor at Teachers College, Columbia University</span>
+        <span class="testimonial-author">— Erik Voss, Organizer of the Tech Day event, Assistant Professor at Teachers College</span>
       </blockquote>
       
       <h2>What Sets FlexiRead Apart</h2>
