--- a/blog3.html
+++ b/blog3.html
@@ -294,7 +294,8 @@
       <p>Today, our platform has completed its core functionality and is being polished for the final showcase as part of our Integrative Project. Although the project is not commercial at this stage, we are excited about its potential future directions and hope it can continue to support independent language learners beyond the classroom.</p>
       
       <blockquote>
-        <!-- Reserved for Dr. Shim's testimonial -->
+        As their Integrative Project advisor, I see FlexiRead as a brilliant example of educational technology making learning more accessible and effective. Sijia and Zehao have done a great job with the instructional design. I find their approach remarkable.
+        <span class="testimonial-author">— Jooeun Shim, Advisor of Master Integrative Project, Lecturer at Teachers College</span>
       </blockquote>
 
       <div class="author-section">
