--- a/blog3.html
+++ b/blog3.html
@@ -156,12 +156,21 @@
     }
 
     .blog-content blockquote {
-      margin: 20px 0;
-      padding: 20px;
+      margin: 30px 0;
+      padding: 25px;
       background-color: #f1f3f5;
       border-left: 4px solid var(--primary-color);
       font-style: italic;
       color: var(--text-color);
+    }
+
+    .testimonial-author {
+      display: block;
+      text-align: right;
+      font-style: italic;
+      font-weight: 600;
+      margin-top: 10px;
+      color: var(--subtle-text);
     }
 
     .author-section {
